# benchmark-blog

./: .gitignore  Cargo.toml  shell.nix
assets/static/css/: styles.css
assets/templates/: blog.hbs  home.hbs
migrations/: 0000_blogs.sql
src/: dal.rs  lib.rs  main.rs
